--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-config-next": "13.1.0",
     "next": "13.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "use-local-storage-state": "^18.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
